# proctodot-core

./: .env.example  .gitignore  Cargo.toml  README.md
core/: Cargo.toml  cargo.toml
core/src/: lib.rs
core/src/encryption/: encryption.rs
core/src/entities/: chat_rooms.rs  mod.rs  passwords.rs  user_wallet.rs  users.rs
core/src/enums/: user_type.rs
core/src/http/: config.rs  mod.rs  response.rs
core/src/http/controllers/: auth_controller.rs  base_controller.rs  mod.rs  user_controller.rs
core/src/http/middlewares/: auth.rs
core/src/http/socket/: mod.rs  websocket_controller.rs  websocket_server.rs
core/src/traits/: placeable.rs
core/src/web3/: mod.rs  wallet_handler.rs  wallet_info.rs
migration/: cargo.toml  seeder.sql
migration/src/: lib.rs  m20250514_153849_create_run_seeder.rs  m20250514_154701_create_users_table.rs  m20250514_194614_create_passwords_table.rs  m20250514_200035_create_user_wallets_table.rs  m20250515_133221_create_chat_rooms_table.rs
src/: main.rs
