[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-web-actors = "4"
actix-ws = { version = "0.3.0" }
actix = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
futures = "0.3"
oauth2 = "4"
sea-orm = { version = "0.10.7", features = ["sqlx-mysql", "runtime-actix-native-tls"] }
async-std = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4.38"
argon2 = "0.3"
rand = "0.8"
tokio = "1.40.0"
futures-util = "0.3.30"
strum = "0.24.1"
strum_macros = "0.24.1"
lettre = "0.10.0"

#Web3 Deps
sp-core = "34.0.0"
sp-runtime = "34.0.0"
sp-keyring = "34.0.0"
hex = "0.4.3"
aes-gcm = "0.10.3"
aes = "0.8.4"

base64 = "0.20.0"
uuid = "1.10.0"
env_logger = "0.11.5"
log = "0.4.22"
sea-query = "0.27.2"
sqlx = "0.6.3"
lazy_static = "1.5.0"
async-trait = "0.1.88"